--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sam-simplest-app",
+  "name": "sam-api-gateway-user-plans",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "config": {
-    "stackName": "learning-serverless-sam-simplest-app",
+    "stackName": "learning-serverless-sam-api-gateway-user-plans",
     "bucketName": "learning-serverless-publish-sam-app"
   },
   "scripts": {
